tests/neg-custom-args/captures/safemode-2.check
-- Error: tests/neg-custom-args/captures/safemode-2.scala:8:15 ---------------------------------------------------------
8 |  val x = caps.unsafe.unsafeErasedValue[String] // error
  |          ^^^^^^^^^^^
  |          Cannot refer to object unsafe from safe code since it is unavailable in safe mode
-- Error: tests/neg-custom-args/captures/safemode-2.scala:10:2 ---------------------------------------------------------
10 |  @caps.unsafe.untrackedCaptures var y = 1 // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  Cannot refer to object unsafe from safe code since it is unavailable in safe mode
-- Error: tests/neg-custom-args/captures/safemode-2.scala:11:2 ---------------------------------------------------------
11 |  @untrackedCaptures def baz() = () // error
   |  ^^^^^^^^^^^^^^^^^^
   |  Cannot refer to object unsafe from safe code since it is unavailable in safe mode
-- Error: tests/neg-custom-args/captures/safemode-2.scala:14:17 --------------------------------------------------------
14 |    def foo(x: T @uncheckedVariance) // error
   |                 ^^^^^^^^^^^^^^^^^^
   |                 Cannot refer to class uncheckedVariance from safe code since it is tagged @rejectSafe
-- Error: tests/neg-custom-args/captures/safemode-2.scala:15:16 --------------------------------------------------------
15 |      : Array[T @uncheckedVariance] = ??? // error
   |                ^^^^^^^^^^^^^^^^^^
   |                Cannot refer to class uncheckedVariance from safe code since it is tagged @rejectSafe
-- Error: tests/neg-custom-args/captures/safemode-2.scala:18:10 --------------------------------------------------------
18 |  def baz(@uncheckedCaptures x: String): Unit = () // error
   |          ^^^^^^^^^^^^^^^^^^
   |          Cannot refer to class uncheckedCaptures from safe code since it is tagged @rejectSafe
